syntax = "proto3";

package alexeykirinyuk.go_grpc_workshop.product_service.product_service.v1;

import "validate/validate.proto";

option go_package = "github.com/alexeykirinyuk/go_grpc_workshop/product_service/pkg/product_service;product_service";

service ProductService {
  rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse);
  rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse);
  rpc GetProduct (GetProductRequest) returns (GetProductResponse);
}

message ProductAttribute {
  string id = 1;
  string value = 2;
}

message Product {
  int64 id = 1;
  string name = 2;
  int64 category_id = 3;
  repeated ProductAttribute attributes = 4;
}

message CreateProductRequest {
  string name = 1 [(validate.rules).string = {min_len: 1, max_len: 100}];
  int64 category_id = 2 [(validate.rules).int64.gt = 0];
  repeated ProductAttribute attributes = 3;
}

message CreateProductResponse {
  Product product = 1;
}

message DeleteProductRequest {
  repeated int64 product_id = 1 [(validate.rules).repeated.items.int64.gt = 0];
}

message DeleteProductResponse {}

message GetProductRequest {
  repeated int64 product_id = 1 [(validate.rules).repeated.items.int64.gt = 0];
}

message GetProductResponse {
  repeated Product product = 1;
}

